--- a/nginx/configs/default.conf
+++ b/nginx/configs/default.conf
@@ -8,4 +8,9 @@ server {
   location / {
     proxy_pass http://client;
   }
+  
+  location /api {
+      rewrite ^\/api\/(.*)$ /api/$1 break;
+      proxy_pass http://localhost:8000;
+  }
 }
